# Program

./: .gitignore  CMakeLists.txt  doxyfile  main.cpp  readme.md
.github/workflows/: main.yml
math/: CMakeLists.txt  det.cpp  det.h  mainTest.cpp  transp.cpp  transp.h
